[gd_scene load_steps=2 format=3 uid="uid://3n5ktffruh2s"]

[ext_resource type="Script" uid="uid://cuawb03gtxrd7" path="res://scripts/ui_scripts/menu.gd" id="1_7w7rl"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7w7rl")

[node name="ButtonNavBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -138.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.133333, 0.133333, 0.133333, 0.215686)

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonNavBar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -125.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40

[node name="InventoryButton" type="Button" parent="ButtonNavBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_pressed_color = Color(0.929715, 0.929715, 0.929715, 1)
theme_override_colors/font_hover_color = Color(0.775063, 0.775063, 0.775063, 1)
theme_override_colors/font_color = Color(0.898039, 0.517647, 0, 1)
theme_override_font_sizes/font_size = 66
text = "INVENTORY"
flat = true

[node name="SaveButton" type="Button" parent="ButtonNavBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_pressed_color = Color(0.929715, 0.929715, 0.929715, 1)
theme_override_colors/font_hover_color = Color(0.775063, 0.775063, 0.775063, 1)
theme_override_colors/font_color = Color(0.898039, 0.517647, 0, 1)
theme_override_font_sizes/font_size = 66
text = "SAVE"
flat = true

[node name="UnstuckButton" type="Button" parent="ButtonNavBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_pressed_color = Color(0.929715, 0.929715, 0.929715, 1)
theme_override_colors/font_hover_color = Color(0.775063, 0.775063, 0.775063, 1)
theme_override_colors/font_color = Color(0.898039, 0.517647, 0, 1)
theme_override_font_sizes/font_size = 66
text = "UNSTUCK"
flat = true

[node name="ExitButton" type="Button" parent="ButtonNavBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_pressed_color = Color(0.929715, 0.929715, 0.929715, 1)
theme_override_colors/font_hover_color = Color(0.775063, 0.775063, 0.775063, 1)
theme_override_colors/font_color = Color(0.898039, 0.517647, 0, 1)
theme_override_font_sizes/font_size = 66
text = "EXIT"
flat = true

[node name="ConfirmExitRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.133333, 0.133333, 0.8)

[node name="ConfirmExit" type="Button" parent="ConfirmExitRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -38.5
offset_right = 55.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_pressed_color = Color(0.929715, 0.929715, 0.929715, 1)
theme_override_colors/font_hover_color = Color(0.775063, 0.775063, 0.775063, 1)
theme_override_colors/font_outline_color = Color(0.745098, 0.25098, 0.14902, 1)
theme_override_colors/font_color = Color(0.898039, 0.517647, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "CONFRIM EXIT"
flat = true

[node name="InventoryContainer" type="GridContainer" parent="."]
visible = false
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
offset_right = 150.0
offset_bottom = 150.0
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[connection signal="pressed" from="ButtonNavBar/HBoxContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="ButtonNavBar/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ButtonNavBar/HBoxContainer/UnstuckButton" to="." method="_on_unstuck_button_pressed"]
[connection signal="pressed" from="ButtonNavBar/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ConfirmExitRect/ConfirmExit" to="." method="_on_confirm_exit_pressed"]
